--- a/src/views/html/assets/scss/common/_popup.scss
+++ b/src/views/html/assets/scss/common/_popup.scss
@@ -259,13 +259,13 @@
 			}
 		}
 		.tit {
-			@include font-size(20px, 40px);
+			@include fontSize(20, 40);
 			line-height: 1.4;
 			letter-spacing: 1px;
 			font-weight: 600;
 		}
 		.desc {
-			@include font-size(14px, 24px);
+			@include fontSize(14, 24);
 			line-height: 1.8;
 			margin: 10px 0;
 		}
