--- a/src/views/html/assets/scss/component/portfolio.scss
+++ b/src/views/html/assets/scss/component/portfolio.scss
@@ -1,160 +1,165 @@
-@import "../common/variables";
+@import '../common/variables';
 .portfolio {
-	&__list {
-		@include list(100px, 80px, 2);
-		@include media-max($l) {
-		@include list(40px, 20px, 2);
-		}
-		@include media-max($m) {
-			@include list(0px, 30px, 1);
-			gap:20px;
-		}
-		&.type_main{
-			@include media-min($l) {
-	   	@include list(200px, 80px, 2);
-			}
-			.portfolio__item{
-				opacity: 0;
-			}
-
-		}
-	}
-	&__item {
-		position: relative;
-		border-radius: 6px;
-		gap: 15px;
-		//@include flex(y);
-		transition: none;
-		@include flex(column);
-		&.hide {
-			opacity: 0;
-			transform: translateY(30px);
-		}
-		@include media-max($xs) {
-			flex-direction: column;
-			gap: 15px;
-		}
-		&:hover {
-			.portfolio__thumb{
-			box-shadow: 0 0 15px 4px #6b4dff66;
-			}
-			.portfolio__hover {
-				opacity: 1;
-				transform: scale(1);
-			}
-		}
-	}
-	&__thumb {
-		@include thumb(100%, auto, 776/468);
-		border-radius: 6px;
-		overflow: hidden;
-		position: relative;
-    border: solid 1px rgba(255, 255, 255, .1);
+  &__list {
+    @include list(100px, 80px, 2);
+    @include media-max($l) {
+      @include list(40px, 20px, 2);
+    }
+    @include media-max($m) {
+      @include list(0px, 30px, 1);
+      gap: 20px;
+    }
+    &.type_main {
+      @include media-min($l) {
+        @include list(200px, 80px, 2);
+      }
+      .portfolio__item {
+        transition: all 0.5s;
+        transform: scale(0.9)  translateY(200px);
+        opacity: 0;
+        &.active {
+          opacity: 1;
+          transform:scale(1)  translateY(0);
+        }
+      }
+    }
+  }
+  &__item {
+    position: relative;
+    border-radius: 6px;
+    gap: 15px;
+    //@include flex(y);
+    transition: none;
+    @include flex(column);
+    &.hide {
+      opacity: 0;
+      transform: translateY(30px);
+    }
+    @include media-max($xs) {
+      flex-direction: column;
+      gap: 15px;
+    }
+    &:hover {
+      .portfolio__thumb {
+        box-shadow: 0 0 15px 4px #6b4dff66;
+      }
+      .portfolio__hover {
+        opacity: 1;
+        transform: scale(1);
+      }
+    }
+  }
+  &__thumb {
+    @include thumb(100%, auto, 776/468);
+    border-radius: 6px;
+    overflow: hidden;
+    position: relative;
+    border: solid 1px rgba(255, 255, 255, 0.1);
     background-image: linear-gradient(to top, #141414, #242831);
-		img {
-			object-fit: cover;
-		}
+    img {
+      object-fit: cover;
+    }
 
-		//&::before {
-		//	content: '';
-		//	position: absolute;
-		//	top:0;
-		//	left:0;
-		//	bottom: 0;
-		//	right: 0;
-		//	background-color: rgba(#000, 0.2);
-		//}
-	}
-	&__info {
-		width: 100%;
-		@include flex(between);
-		align-items: flex-start;
-		gap: 20px;
-		@include media-max($l) {
-			width: 100%;
-		}
-		&-tit {
-			font-weight: 700;
-			@include font-size(16px, 28px);
-			color: #fff;
-			margin-bottom: 10px;
-			flex: 0 0 auto;
-			@include media-max($l) {
-				margin-bottom: 5px;
-			}
-		}
-		&-desc {
-			flex: 1;
-			display: flex;
-			justify-content: flex-end;
-			gap: 10px;
-			color: $text-3;
-			font-size: 18px;
-			line-height: 1.5;
-			@include font-size(14px, 26px);
-		}
-	}
-	&__hover {
-		position: absolute;
-		top: 0;
-		left: 0;
-		bottom: 0;
-		right: 0;
-		transform: scale(0.9);
-		margin: auto;
-		@include flex(column);
-		@include inflex(all);
-		align-items: center;
-		gap: 15px;
-		opacity: 0;
-		transition: 0.25s ease;
-		border: 2px solid transparent;
-		background-image: linear-gradient($bg-2, $bg-2), linear-gradient(to right, #0088ff 0%, #7900c9 100%);
-		background-origin: border-box;
-		background-clip: content-box, border-box;
-		@include media-max($l) {
-			display: none !important;
-		}
+    //&::before {
+    //	content: '';
+    //	position: absolute;
+    //	top:0;
+    //	left:0;
+    //	bottom: 0;
+    //	right: 0;
+    //	background-color: rgba(#000, 0.2);
+    //}
+  }
+  &__info {
+    width: 100%;
+    @include flex(between);
+    align-items: flex-start;
+    gap: 20px;
+    @include media-max($l) {
+      width: 100%;
+    }
+    &-tit {
+      font-weight: 700;
+      @include fontSize(16, 28);
+      color: #fff;
+      margin-bottom: 10px;
+      flex: 0 0 auto;
+      @include media-max($l) {
+        margin-bottom: 5px;
+      }
+    }
+    &-desc {
+      flex: 1;
+      display: flex;
+      justify-content: flex-end;
+      gap: 10px;
+      color: $text-3;
+      font-size: 18px;
+      line-height: 1.5;
+      @include fontSize(14, 26);
+    }
+  }
+  &__hover {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    transform: scale(0.9);
+    margin: auto;
+    @include flex(column);
+    @include inflex(all);
+    align-items: center;
+    gap: 15px;
+    opacity: 0;
+    transition: 0.25s ease;
+    border: 2px solid transparent;
+    background-image: linear-gradient($bg-2, $bg-2), linear-gradient(to right, #0088ff 0%, #7900c9 100%);
+    background-origin: border-box;
+    background-clip: content-box, border-box;
+    @include media-max($l) {
+      display: none !important;
+    }
 
-		.tit {
-			font-size: 30px;
-			font-weight: 600;
-			margin-bottom: 10px;
-		}
+    .tit {
+      font-size: 30px;
+      font-weight: 600;
+      margin-bottom: 10px;
+    }
 
-		.desc {
-			font-size: 20px;
-			color: $text-3;
-			@include flex(s);
-			gap: 8px;
-			@include media-max($l) {
-				font-size: 14px;
-			}
-			.flex_row {
-				@include flex(s);
-				gap: 10px;
-				flex-wrap: wrap;
-			}
-			.skil {
-				@include flex(y);
-				gap: 3px;
-			}
-			.link {
-				margin-top: 10px;
-				//color: $point;
-				//border-bottom: 1px solid $point3;
-				@include flex(y);
-				gap: 2px;
-				font-size: 18px;
-				font-weight: 400;
-				.icon_link path {
-					stroke: #fff;
-				}
-			}
-			&.skills,
-			&.links {
-				margin-top: 5px;
-			}
-		}
-	}
+    .desc {
+      font-size: 20px;
+      color: $text-3;
+      @include flex(s);
+      gap: 8px;
+      @include media-max($l) {
+        font-size: 14px;
+      }
+      .flex_row {
+        @include flex(s);
+        gap: 10px;
+        flex-wrap: wrap;
+      }
+      .skil {
+        @include flex(y);
+        gap: 3px;
+      }
+      .link {
+        margin-top: 10px;
+        //color: $point;
+        //border-bottom: 1px solid $point3;
+        @include flex(y);
+        gap: 2px;
+        font-size: 18px;
+        font-weight: 400;
+        .icon_link path {
+          stroke: #fff;
+        }
+      }
+      &.skills,
+      &.links {
+        margin-top: 5px;
+      }
+    }
+  }
 }
